[kyo-aeron] single transport: drop io.aeron, add first-class AeronDriver
The JVM ran io.aeron's Java reimplementation while Native, JS, and Wasm ran the C
reference library, so every transport change had to be made twice and the two could
diverge. The JVM now runs the same C client and embedded C driver as every other
platform, through Panama over the existing kyo_aeron.c shim.

JvmAeronTransport and the three per-platform selectors are gone; one shared
AeronPlatformTransport serves all four platforms and kyo-aeron builds from shared
sources only. This also retires the JVM's use-after-free (an offer writing into a term
buffer the client close had unmapped): the C shim's close_mutex already solved it, and
the JVM inherits that rather than re-deriving it.

kyo-compiler drove the same conflict from the other side, launching its own embedded
Java MediaDriver. AeronDriver gives it a first-class safe API for what it actually
wants, a shared embedded driver several clients connect to, with the CI-tuned liveness
and unblock timeouts it relied on now expressed as AeronDriver.Settings and applied by
the C driver. Its raw io.aeron use is gone with the dependency.

Consequences worth noting for review:
- Compiler.Pool.init widens from Sync to Async: starting the C driver is an
  @Ffi.blocking downcall, where MediaDriver.launchEmbedded was synchronous.
- Both modules drop the four --add-opens io.aeron needed and take
  --enable-native-access instead, which is advisory on JDK 25.
- kyo_aeron_driver_start takes the two timeouts; 0 keeps the driver's default.
- The internal FFI phantom AeronDriver is now AeronDriverHandle, matching
  AeronClientHandle, freeing the name for the public type.

release.yml gains the libaeron staging step it never had, mirroring Prepare BoringSSL.
Without it the publish fails at link time on cannot find -laeron_driver_static, which
is now unconditional since the JVM artifact carries the shim.